<resources>
    <string name="admob_app_id">ca-app-pub-5055227510512491~1392737094</string>
    <string name="admob_banner_id">ca-app-pub-5055227510512491/8888083732</string>
    <string name="admob_inter_id">ca-app-pub-5055227510512491/5436773942</string>
    <string name="admob_native_id">ca-app-pub-5055227510512491/3409376404</string>
    <string name="alert">Unsaved work.</string>
    <string name="ap">A4-72dpi</string>
    <string name="ap2">A4-200dpi</string>
    <string name="ap3">A4-300dpi</string>
    <string name="app_name">Thumbnail Maker</string>
    <string name="auto">Auto</string>
    <string name="camera">Camera</string>
    <string name="create_dir_err">Cant create directory to save image.</string>
    <string name="cut_inside">Cut Inside</string>
    <string name="cut_outside">Cut Outside</string>
    <string name="cut_photo">Select Photo</string>
    <string name="del_error_toast">Error occured during deletion.</string>
    <string name="drag_bw">Drag POINTER to restore image.</string>
    <string name="drag_color">Drag POINTER to earse.</string>
    <string name="dw">Wallpaper</string>
    <string name="dwl">Wallpaper Landscape</string>
    <string name="dwp">Wallpaper Portrait</string>
    <string name="erase">Manual</string>
    <string name="error">Error</string>
    <string name="exit_cut_page">Do you want to exit without saving?</string>
    <string name="facebook">Size For FB</string>
    <string name="fadi">Ad Image</string>
    <string name="fagcp">Group Cover Photo</string>
    <string name="fai">App Image</string>
    <string name="fapi">Profile Image</string>
    <string name="fc">Cover</string>
    <string name="fp">Post</string>
    <string name="gc">Cover</string>
    <string name="gcp">Cover Photo</string>
    <string name="gpp">Profile Photo</string>
    <string name="i">Infographic</string>
    <string name="ia">Average</string>
    <string name="icon_desc">Ad icon</string>
    <string name="im">Medium</string>
    <string name="image_desc">Ad image</string>
    <string name="imo">Mode</string>
    <string name="import_error">Error while getting image.</string>
    <string name="import_img_warning">Please import image!!!</string>
    <string name="importing_image">Importing image...</string>
    <string name="in_app">Remove ads &amp; WaterMark</string>
    <string name="info">Infographic</string>
    <string name="ins_DesignOptionsInstruction">Long Press on your Design for Options.</string>
    <string name="insta">Size For Insta</string>
    <string name="ip">Post</string>
    <string name="l">Letter-72dpi</string>
    <string name="l2">Letter-200dpi</string>
    <string name="l3">Letter-300dpi</string>
    <string name="lasso">Extract</string>
    <string name="lb">Banner</string>
    <string name="lc">Cover</string>
    <string name="letter">Letter</string>
    <string name="link">Size For LinkedIn</string>
    <string name="linkedinp">Profile</string>
    <string name="logo">Logo</string>
    <string name="logo_fa">Logo</string>
    <string name="logo_go">Logo</string>
    <string name="logo_li">Logo</string>
    <string name="logo_tw">Logo</string>
    <string name="logosize">Logo size</string>
    <string name="memoryerror">Oops! something went wrong. Seems like you dont have enough space to save this picture. Please check your device internal memory and delete some data and then try again.</string>
    <string name="msg_NoDesigns">No Design saved. Check out Free Designs Or Create Thumbnail and save as Design.</string>
    <string name="msg_auto_btn">Click AUTO button to perform auto erase</string>
    <string name="msg_bw_btn">Click RESTORE button to restore image</string>
    <string name="msg_draw_lasso">Draw a closed path.</string>
    <string name="msg_lasso_btn">Click EXTRACT button</string>
    <string name="msg_manual_btn">Click MANUAL button to manually erase</string>
    <string name="msg_up_arrow">Click UP arrow to get options</string>
    <string name="msg_zoom_btn">Click ZOOM button to drag and zoom image.</string>
    <string name="no">No</string>
    <string name="no_layers">No Layers !!</string>
    <string name="no_saved_pics">No saved pictures</string>
    <string name="offset">Offset</string>
    <string name="ok">OK</string>
    <string name="p">Presentation</string>
    <string name="paper">Paper</string>
    <string name="pbd">Board Display</string>
    <string name="picUpImg">select images</string>
    <string name="pinterst">Pinterest</string>
    <string name="plzwait">Please wait..</string>
    <string name="present">Presentations</string>
    <string name="prinproi">Profile Image</string>
    <string name="printp">Pin</string>
    <string name="radius">Size</string>
    <string name="ratio">Select Ratio</string>
    <string name="ratio_selection">Ratio</string>
    <string name="redoing">Redoing</string>
    <string name="restore">Restore</string>
    <string name="save_err">Error while saving</string>
    <string name="select_picture">Select picture using</string>
    <string name="share_image">Share</string>
    <string name="share_text">"I'm using amazing Thumbnail Maker! Get the free app at"</string>
    <string name="size">Size</string>
    <string name="sponsored">Sponsored</string>
    <string name="storage">Storage</string>
    <string name="strick_info">"
 • For thumbnail size 1280x720 resolution
 • JPG or PNG image formats
 • Under the 2MB limit
 • 16:9 aspect ratio"</string>
    <string name="tcover">Cover</string>
    <string name="template_error">no template found</string>
    <string name="tgraphics">Graphic</string>
    <string name="thcover">Cover</string>
    <string name="threshold">Threshold</string>
    <string name="ti">Image</string>
    <string name="tp">Post</string>
    <string name="tpi">Profile Image</string>
    <string name="tumbler">Size For Tumblr</string>
    <string name="tvi">Video Image</string>
    <string name="twitch">Size For Twitch</string>
    <string name="twitter">Size For Twitter</string>
    <string name="txt_Outline">Outline</string>
    <string name="txt_backgrounds">Background</string>
    <string name="txt_colorOpacty">Colors and Opacity</string>
    <string name="txt_conti">continue</string>
    <string name="txt_controls">Controls</string>
    <string name="txt_curve">Curve</string>
    <string name="txt_desk">Desktop</string>
    <string name="txt_device">Device</string>
    <string name="txt_fonts">Fonts</string>
    <string name="txt_google">cover</string>
    <string name="txt_shadow">Shadow</string>
    <string name="txt_spacing">Space</string>
    <string name="undoing">Undoing</string>
    <string name="watt">Wattpad Covers</string>
    <string name="wattapad">Size For Wattpad Covers</string>
    <string name="yes">Yes</string>
    <string name="youtube">Size For Youtube</string>
    <string name="youtubecover">Cover</string>
    <string name="youtubethumbnail">Thumbnail</string>
    <string name="ytd">Tablet Display</string>
    <string name="zoom">Zoom</string>
        <string name="app_id_admob" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
        <string name="banner_id_admob" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
        <string name="interstitial_id_admob" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
        <string name="native_id_admob" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
        <string name="reward_id_admob" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
        <string name="AudioCompressor">Audio\nCompressor</string>
        <string name="AudioCutter">Audio\nCutter</string>
        <string name="AudioJoiner">Audio\nJoiner</string>
        <string name="AudioVideoMixer">Video\nMixer</string>
        <string name="FastMotionVideo">Fast-motion\nVideo</string>
        <string name="MainFolderName">VEditor</string>
        <string name="PhotoToVideo">Photo To Video</string>
        <string name="SlowMotionVideo">Slow-motion\nVideo</string>
        <string name="VideoCollage">VideoCollage</string>
        <string name="VideoCompressor">Video\nCompressor</string>
        <string name="VideoConverter">Video\nConverter</string>
        <string name="VideoCroper">Video\nCropper</string>
        <string name="VideoCutter">Video\nCutter</string>
        <string name="VideoJoiner">VideoJoiner</string>
        <string name="VideoMirror">Video\nMirror</string>
        <string name="VideoMute">Video\nMute</string>
        <string name="VideoReverse">VideoReverse</string>
        <string name="VideoRotate">Video\nRotate</string>
        <string name="VideoSplitter">Video\nSplitter</string>
        <string name="VideoToGIF">Video To GIF</string>
        <string name="VideoToImage">VideoToImage</string>
        <string name="VideoToMP3">Video To MP3</string>
        <string name="VideoWatermark">VideoWatermark</string>
        <string name="alert_ok_button">OK</string>
        <string name="alert_title_failure">Error</string>
        <string name="alert_title_success">Success</string>
        <string name="app_folder_name2">VideoCollage</string>
        <string name="artist_name">RingtoneMaker</string>
        <string name="bad_extension_error">Sorry, RingtoneMaker is not yet able to edit files of type</string>
        <string name="character_counter_pattern">%1$d / %2$d</string>
        <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
        <string name="delete_tmp_error">Error deleting temporary file</string>
        <string name="end_marker">End marker</string>
        <string name="no_extension_error">Sorry, RingtoneMaker can\'t edit a file if it doesn\'t have an extension like .mp3 or .wav</string>
        <string name="no_sdcard">Sorry, can not run unless you have an SD Card inserted.</string>
        <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>
        <string name="no_unique_filename">Unable to find unique filename</string>
        <string name="play">Play</string>
        <string name="play_error">Unable to play this media file</string>
        <string name="progress_dialog_loading">Loading…</string>
        <string name="progress_dialog_saving">Saving…</string>
        <string name="read_error">Error reading file</string>
        <string name="s1">Save image</string>
        <string name="s2">Allow Ad to store image in Picture gallery?</string>
        <string name="s3">Accept</string>
        <string name="s4">Decline</string>
        <string name="s5">Create calendar event</string>
        <string name="s6">Allow Ad to create a calendar event?</string>
        <string name="s7">Test Ad</string>
        <string name="sdcard_readonly">Sorry, the SD Card is mounted as read-only.</string>
        <string name="sdcard_shared">Sorry, can not run while your handset is mounted as a USB device.</string>
        <string name="shipped_ffmpeg_version">n2.4.2</string>
        <string name="start_marker">Start marker</string>
        <string name="stop">Stop</string>
        <string name="too_small_error">Can\'t save a file that small, try making it longer.</string>
        <string name="write_error">Error writing file</string>
        <string name="image_nextractor">Image\nExtractor</string>
        <string name="video_njoiner">Video \nJoiner</string>
        <string name="more_apps">More Apps</string>
        <string name="press_again_to_exit">Press Again To Exit!</string>
        <string name="video_editor">Video Editor</string>
        <string name="editor">Editor</string>
        <string name="reverseVideo">Reverse\nVideo</string>
        <string name="ad_attribution">Ad</string>
</resources>