<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/color_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@+id/ss" android:background="@color/color_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="20.0sp" android:typeface="serif" android:textColor="@color/white" android:id="@+id/txterorr" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="7.0dip" android:text="@string/error" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/kk" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:layout_below="@id/ss">
        <TextView android:textSize="18.0dip" android:textColor="@color/white" android:id="@+id/txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/template_error" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/ll" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:layout_below="@id/kk" android:layout_centerHorizontal="true">
        <Button android:textSize="15.0sp" android:typeface="serif" android:textColor="@color/white" android:id="@+id/btn_ok_e" android:background="@color/color_bar" android:padding="5.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/no" android:layout_weight="1.0" />
        <Button android:textSize="15.0sp" android:typeface="serif" android:textColor="@color/white" android:id="@+id/btn_conti" android:background="@color/color_add_btn" android:padding="5.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/txt_conti" android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>